search and chat screen

--- a/ShoutAboutApp/ShoutAboutApp/Base.lproj/Main.storyboard
+++ b/ShoutAboutApp/ShoutAboutApp/Base.lproj/Main.storyboard
@@ -863,7 +863,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.33066706000000001" green="0.76211642049999995" blue="0.99413050520000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="backgroundColor" red="0.066666666669999999" green="0.47450980390000003" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="kfD-rJ-l1g" firstAttribute="leading" secondItem="CZn-l8-8s1" secondAttribute="trailing" constant="20" id="AxQ-v7-aEs"/>
                                     <constraint firstItem="mOH-xd-xMN" firstAttribute="top" secondItem="CZn-l8-8s1" secondAttribute="top" constant="128" id="DMV-9e-zYJ"/>
@@ -1123,11 +1123,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="pyn-KZ-lU6">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RatingTableViewCell" rowHeight="200" id="4Yb-l3-vB7" customClass="RatingTableViewCell" customModule="ShoutAboutApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="200"/>
+                                        <rect key="frame" x="0.0" y="92" width="600" height="200"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4Yb-l3-vB7" id="UT6-Lh-hjC">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
@@ -1221,7 +1221,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="WriteReviewTableViewCell" rowHeight="100" id="Qof-l9-hV1" customClass="WriteReviewTableViewCell" customModule="ShoutAboutApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="228" width="600" height="100"/>
+                                        <rect key="frame" x="0.0" y="292" width="600" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Qof-l9-hV1" id="ff7-8k-cbq">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
@@ -1235,6 +1235,9 @@
                                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                            <connections>
+                                                                <outlet property="delegate" destination="NFp-ks-KzP" id="Ogl-bb-X4Y"/>
+                                                            </connections>
                                                         </textView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Write a Review" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9IQ-ob-dH0">
                                                             <rect key="frame" x="249" y="8" width="102" height="21"/>
@@ -1265,9 +1268,12 @@
                                                 <constraint firstAttribute="bottom" secondItem="AUu-nN-4dx" secondAttribute="bottom" id="ll8-7T-zEf"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="textView" destination="2sR-hW-pg7" id="hGi-o3-ck1"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="button" rowHeight="54" id="Dp9-Y0-9et" customClass="ClickTableViewCell" customModule="ShoutAboutApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="328" width="600" height="54"/>
+                                        <rect key="frame" x="0.0" y="392" width="600" height="54"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Dp9-Y0-9et" id="4ia-cO-3de">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="54"/>
@@ -1296,7 +1302,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReviewTableViewCell" rowHeight="250" id="RaV-K2-jwb" customClass="ReviewTableViewCell" customModule="ShoutAboutApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="382" width="600" height="250"/>
+                                        <rect key="frame" x="0.0" y="446" width="600" height="250"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RaV-K2-jwb" id="Ek0-mC-VyD">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="250"/>
@@ -1662,7 +1668,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UesrReviewTableViewCell" rowHeight="100" id="aRf-qu-9nn" customClass="UesrReviewTableViewCell" customModule="ShoutAboutApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="632" width="600" height="100"/>
+                                        <rect key="frame" x="0.0" y="696" width="600" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aRf-qu-9nn" id="9k2-dE-FnQ">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
@@ -1757,9 +1763,10 @@
                             <constraint firstItem="pHv-oA-ahs" firstAttribute="top" secondItem="pyn-KZ-lU6" secondAttribute="bottom" id="SJn-3Q-BvJ"/>
                             <constraint firstItem="pyn-KZ-lU6" firstAttribute="leading" secondItem="mnj-2A-uQt" secondAttribute="leading" id="qTu-8Q-IqI"/>
                             <constraint firstAttribute="trailing" secondItem="pyn-KZ-lU6" secondAttribute="trailing" id="tHY-MF-7km"/>
-                            <constraint firstItem="pyn-KZ-lU6" firstAttribute="top" secondItem="mnj-2A-uQt" secondAttribute="top" id="zdE-bN-hha"/>
+                            <constraint firstItem="pyn-KZ-lU6" firstAttribute="top" secondItem="mnj-2A-uQt" secondAttribute="top" constant="64" id="zdE-bN-hha"/>
                         </constraints>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="tableView" destination="pyn-KZ-lU6" id="yuD-dh-cOz"/>
                     </connections>
@@ -2026,7 +2033,7 @@
     <resources>
         <image name="CompactCamera" width="50" height="50"/>
         <image name="Contacts" width="50" height="50"/>
-        <image name="Edit" width="50" height="50"/>
+        <image name="Edit" width="22" height="22"/>
         <image name="close_iPhone.png" width="16" height="19"/>
         <image name="icon_attach_inbox.png" width="16" height="19"/>
         <image name="profile_pic" width="67" height="68"/>
