--- a/ShoutAboutApp/ShoutAboutApp/Base.lproj/Main.storyboard
+++ b/ShoutAboutApp/ShoutAboutApp/Base.lproj/Main.storyboard
@@ -577,7 +577,7 @@
                     <connections>
                         <segue destination="Yjd-8J-KNb" kind="relationship" relationship="viewControllers" id="zzD-L3-ikP"/>
                         <segue destination="rWj-xD-9LE" kind="relationship" relationship="viewControllers" id="OW5-YV-2ZT"/>
-                        <segue destination="8iz-iB-Jya" kind="relationship" relationship="viewControllers" id="WTZ-BG-SZb"/>
+                        <segue destination="JMP-8F-mSG" kind="relationship" relationship="viewControllers" id="WTZ-BG-SZb"/>
                         <segue destination="jiD-kF-z17" kind="relationship" relationship="viewControllers" id="umK-np-8hl"/>
                         <segue destination="trV-yL-XSM" kind="relationship" relationship="viewControllers" id="9nk-KD-3IB"/>
                     </connections>
@@ -787,7 +787,7 @@
             </objects>
             <point key="canvasLocation" x="1038" y="-450"/>
         </scene>
-        <!--PROFILE-->
+        <!--Profile View Controller-->
         <scene sceneID="X3D-cc-4KJ">
             <objects>
                 <viewController id="8iz-iB-Jya" customClass="ProfileViewController" customModule="ShoutAboutApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -974,39 +974,61 @@
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="15" id="yWb-bx-zTG"/>
                                                 </constraints>
-                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ADm-Em-xuJ">
-                                                <rect key="frame" x="20" y="20" width="240" height="20"/>
+                                                <rect key="frame" x="20" y="16" width="240" height="10"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lB3-rS-bN5" customClass="RatingControl" customModule="ShoutAboutApp" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="0.0" width="180" height="10"/>
+                                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                    </view>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="3 / 5" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z3S-uQ-75a">
+                                                        <rect key="frame" x="180" y="0.0" width="60" height="10"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="60" id="7nu-3h-z85"/>
+                                                            <constraint firstAttribute="height" constant="10" id="lwt-Co-f0j"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
+                                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="20" id="BAW-no-3vr"/>
+                                                    <constraint firstAttribute="height" constant="10" id="BAW-no-3vr"/>
+                                                    <constraint firstAttribute="bottom" secondItem="lB3-rS-bN5" secondAttribute="bottom" id="Idl-d0-RdT"/>
+                                                    <constraint firstAttribute="trailing" secondItem="Z3S-uQ-75a" secondAttribute="trailing" id="KUX-6l-xx2"/>
+                                                    <constraint firstItem="Z3S-uQ-75a" firstAttribute="top" secondItem="ADm-Em-xuJ" secondAttribute="top" id="VUo-6e-9yc"/>
+                                                    <constraint firstItem="lB3-rS-bN5" firstAttribute="leading" secondItem="ADm-Em-xuJ" secondAttribute="leading" id="bi3-wx-rrv"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Z3S-uQ-75a" secondAttribute="bottom" id="mZH-rq-9dL"/>
+                                                    <constraint firstItem="lB3-rS-bN5" firstAttribute="top" secondItem="ADm-Em-xuJ" secondAttribute="top" id="o0U-JI-ldB"/>
+                                                    <constraint firstItem="Z3S-uQ-75a" firstAttribute="leading" secondItem="lB3-rS-bN5" secondAttribute="trailing" id="yeb-dc-gbg"/>
                                                 </constraints>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="38 Reviews" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HIM-Q6-XR0">
-                                                <rect key="frame" x="0.0" y="45" width="280" height="15"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="15" id="PMe-r4-Awv"/>
-                                                </constraints>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HOe-sK-PGo">
+                                                <rect key="frame" x="20" y="26" width="240" height="34"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                                <state key="normal" title="38 Reviews" image="Play"/>
+                                                <connections>
+                                                    <action selector="goToReviewScreen" destination="8iz-iB-Jya" eventType="touchUpInside" id="ATk-16-Rbg"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstItem="QEA-7l-xWh" firstAttribute="top" secondItem="glV-tf-a2P" secondAttribute="top" id="0Ya-Tl-eC7"/>
                                             <constraint firstItem="QEA-7l-xWh" firstAttribute="leading" secondItem="glV-tf-a2P" secondAttribute="leading" id="2I3-iI-JgD"/>
                                             <constraint firstItem="ADm-Em-xuJ" firstAttribute="leading" secondItem="glV-tf-a2P" secondAttribute="leading" constant="20" id="6Qt-vN-tBO"/>
-                                            <constraint firstAttribute="bottom" secondItem="HIM-Q6-XR0" secondAttribute="bottom" id="6Wa-Sq-eSw"/>
-                                            <constraint firstAttribute="trailing" secondItem="HIM-Q6-XR0" secondAttribute="trailing" id="Hc6-8W-PPh"/>
+                                            <constraint firstItem="HOe-sK-PGo" firstAttribute="top" secondItem="ADm-Em-xuJ" secondAttribute="bottom" id="70R-2N-djE"/>
                                             <constraint firstAttribute="trailing" secondItem="QEA-7l-xWh" secondAttribute="trailing" id="IYM-rD-ncm"/>
-                                            <constraint firstItem="ADm-Em-xuJ" firstAttribute="top" secondItem="QEA-7l-xWh" secondAttribute="bottom" constant="5" id="KL5-gX-CtJ"/>
+                                            <constraint firstItem="ADm-Em-xuJ" firstAttribute="top" secondItem="QEA-7l-xWh" secondAttribute="bottom" constant="1" id="KL5-gX-CtJ"/>
                                             <constraint firstAttribute="trailing" secondItem="ADm-Em-xuJ" secondAttribute="trailing" constant="20" id="PVG-Ci-aMz"/>
-                                            <constraint firstItem="HIM-Q6-XR0" firstAttribute="top" secondItem="ADm-Em-xuJ" secondAttribute="bottom" constant="5" id="WUM-rW-Ugz"/>
-                                            <constraint firstItem="HIM-Q6-XR0" firstAttribute="leading" secondItem="glV-tf-a2P" secondAttribute="leading" id="p2w-LN-SWx"/>
+                                            <constraint firstAttribute="bottom" secondItem="HOe-sK-PGo" secondAttribute="bottom" id="bsN-YP-bWK"/>
+                                            <constraint firstAttribute="trailing" secondItem="HOe-sK-PGo" secondAttribute="trailing" constant="20" id="kaV-tk-jfZ"/>
+                                            <constraint firstItem="HOe-sK-PGo" firstAttribute="leading" secondItem="glV-tf-a2P" secondAttribute="leading" constant="20" id="yUp-24-M8F"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a5f-Ot-Y5a">
@@ -1080,16 +1102,17 @@
                             <constraint firstAttribute="trailing" secondItem="lFY-m2-Bye" secondAttribute="trailing" id="nb3-Mu-0I3"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="PROFILE" id="4br-gi-cYA"/>
+                    <navigationItem key="navigationItem" id="lkG-JG-zA3"/>
                     <connections>
                         <outlet property="cameraButton" destination="ooY-Vu-uCK" id="Deb-vF-eyn"/>
                         <outlet property="imageView" destination="CZn-l8-8s1" id="wCN-SE-pVc"/>
+                        <outlet property="reviewButton" destination="HOe-sK-PGo" id="Me8-8f-1N2"/>
                         <outlet property="tableView" destination="Rj0-yY-dht" id="14F-M6-yTv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WGU-gc-zHJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="140" y="908"/>
+            <point key="canvasLocation" x="952" y="908"/>
         </scene>
         <!--CHAT-->
         <scene sceneID="0hP-iv-hM9">
@@ -2071,12 +2094,32 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cMA-ts-H3D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--PROFILE-->
+        <scene sceneID="yYc-0Q-Crj">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="JMP-8F-mSG" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="PROFILE" id="4br-gi-cYA"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="p5Z-lT-cbt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="8iz-iB-Jya" kind="relationship" relationship="rootViewController" id="owO-sk-CyY"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="35l-GL-0EK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="140" y="908"/>
+        </scene>
     </scenes>
     <resources>
         <image name="CompactCamera" width="50" height="50"/>
         <image name="Contacts" width="50" height="50"/>
         <image name="Edit" width="22" height="22"/>
         <image name="Menu" width="22" height="22"/>
+        <image name="Play" width="10" height="10"/>
         <image name="close_iPhone.png" width="16" height="19"/>
         <image name="icon_attach_inbox.png" width="16" height="19"/>
         <image name="profile_pic" width="67" height="68"/>
