--- a/ShoutAboutApp/ShoutAboutApp/Base.lproj/LaunchScreen.storyboard
+++ b/ShoutAboutApp/ShoutAboutApp/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="sWo-sb-jVJ">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="sWo-sb-jVJ" secondAttribute="trailing" id="1It-G9-3HZ"/>
+                            <constraint firstItem="sWo-sb-jVJ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="MEc-od-L36"/>
+                            <constraint firstItem="sWo-sb-jVJ" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="Z9q-6o-y8U"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="sWo-sb-jVJ" secondAttribute="bottom" id="dao-TZ-p9h"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +35,7 @@
             <point key="canvasLocation" x="306" y="330"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="splash" width="1242" height="2208"/>
+    </resources>
 </document>
