--- a/ShoutAboutApp/ShoutAboutApp/Base.lproj/Main.storyboard
+++ b/ShoutAboutApp/ShoutAboutApp/Base.lproj/Main.storyboard
@@ -82,6 +82,7 @@
             <string>TitilliumWeb-Regular</string>
             <string>TitilliumWeb-Regular</string>
             <string>TitilliumWeb-Regular</string>
+            <string>TitilliumWeb-Regular</string>
         </mutableArray>
         <mutableArray key="TitilliumWeb-SemiBold.ttf">
             <string>TitilliumWeb-SemiBold</string>
@@ -1134,7 +1135,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xzs-ke-HHv">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xzs-ke-HHv">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -1142,7 +1143,7 @@
                                         <rect key="frame" x="0.0" y="92" width="600" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xI2-Jr-zGF" id="YSD-Bm-5w7">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7zU-F7-uem">
@@ -3530,7 +3531,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lTi-LQ-cws">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="searchbg" translatesAutoresizingMaskIntoConstraints="NO" id="lTi-LQ-cws">
                                 <rect key="frame" x="0.0" y="64" width="600" height="210"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -3557,7 +3558,7 @@
                                             <constraint firstAttribute="width" constant="46" id="kVy-hg-nAY"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="18"/>
-                                        <state key="normal" title="X">
+                                        <state key="normal" image="cross">
                                             <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -3575,7 +3576,7 @@
                                     <constraint firstAttribute="trailing" secondItem="YLe-PG-bby" secondAttribute="trailing" constant="8" id="zfE-Aq-NZ7"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qa5-Og-IjL">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qa5-Og-IjL">
                                 <rect key="frame" x="0.0" y="314" width="600" height="237"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -3583,7 +3584,7 @@
                                         <rect key="frame" x="0.0" y="28" width="600" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DaC-xh-ZcM" id="yMc-xS-zbh">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="99"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ekp-Sf-8uO">
@@ -3773,12 +3774,12 @@
                                     <outlet property="delegate" destination="bXi-J9-lXi" id="I6G-z3-PQL"/>
                                 </connections>
                             </tableView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="search_logo" translatesAutoresizingMaskIntoConstraints="NO" id="3Im-0W-OZO">
-                                <rect key="frame" x="260" y="78" width="80" height="107"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="searchlogo" translatesAutoresizingMaskIntoConstraints="NO" id="3Im-0W-OZO">
+                                <rect key="frame" x="245" y="78" width="110" height="110"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="107" id="1Qq-fN-fNr"/>
-                                    <constraint firstAttribute="width" constant="80" id="Awm-Cn-kmI"/>
+                                    <constraint firstAttribute="height" constant="110" id="1Qq-fN-fNr"/>
+                                    <constraint firstAttribute="width" constant="110" id="Awm-Cn-kmI"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tbQ-oG-TNY">
@@ -3787,18 +3788,29 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="41" id="lEo-Yy-Fu4"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="TitilliumWeb-Regular" family="Titillium Web" pointSize="14"/>
-                                <state key="normal" title="Enter a name of number" image="search">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" name="TitilliumWeb-Regular" family="Titillium Web" pointSize="15"/>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" title="Enter a name of number" image="tab_search">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="searchButtonClicked:" destination="bXi-J9-lXi" eventType="touchUpInside" id="cte-rk-B3z"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Shoutaboutapp" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dua-hX-Z9I">
+                                <rect key="frame" x="239" y="189" width="123" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Rjb-MI-c0C"/>
+                                    <constraint firstAttribute="width" constant="123" id="rD9-Vn-sPJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="TitilliumWeb-Regular" family="Titillium Web" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="tbQ-oG-TNY" firstAttribute="top" secondItem="3Im-0W-OZO" secondAttribute="bottom" constant="34" id="1RC-Ip-XTP"/>
+                            <constraint firstItem="tbQ-oG-TNY" firstAttribute="top" secondItem="3Im-0W-OZO" secondAttribute="bottom" constant="31" id="1RC-Ip-XTP"/>
                             <constraint firstItem="3Im-0W-OZO" firstAttribute="top" secondItem="sDB-0m-yhF" secondAttribute="bottom" constant="14" id="4dL-Du-62Z"/>
                             <constraint firstItem="Qa5-Og-IjL" firstAttribute="trailing" secondItem="lTi-LQ-cws" secondAttribute="trailing" id="4yQ-4P-lpz"/>
                             <constraint firstItem="lTi-LQ-cws" firstAttribute="leading" secondItem="jqK-lX-vT5" secondAttribute="leading" id="63S-zB-68T"/>
@@ -3809,10 +3821,12 @@
                             <constraint firstItem="Qa5-Og-IjL" firstAttribute="leading" secondItem="lTi-LQ-cws" secondAttribute="leading" id="PBu-x0-w2j"/>
                             <constraint firstItem="lTi-LQ-cws" firstAttribute="top" secondItem="jqK-lX-vT5" secondAttribute="top" constant="64" id="Qfg-Vc-8Pu"/>
                             <constraint firstAttribute="trailing" secondItem="lTi-LQ-cws" secondAttribute="trailing" id="Sed-3M-Nkx"/>
+                            <constraint firstItem="dua-hX-Z9I" firstAttribute="centerX" secondItem="lTi-LQ-cws" secondAttribute="centerX" id="VD9-3I-0ZV"/>
                             <constraint firstItem="3Im-0W-OZO" firstAttribute="centerX" secondItem="lTi-LQ-cws" secondAttribute="centerX" id="VwJ-a4-Ydx"/>
                             <constraint firstAttribute="trailing" secondItem="tbQ-oG-TNY" secondAttribute="trailing" constant="30" id="aqy-lb-gqG"/>
                             <constraint firstItem="lTi-LQ-cws" firstAttribute="leading" secondItem="jqK-lX-vT5" secondAttribute="leading" id="bcW-Lh-FQI"/>
                             <constraint firstItem="XKP-bE-Fqd" firstAttribute="top" secondItem="lTi-LQ-cws" secondAttribute="bottom" id="bvY-Ch-CRR"/>
+                            <constraint firstItem="dua-hX-Z9I" firstAttribute="top" secondItem="3Im-0W-OZO" secondAttribute="bottom" constant="1" id="gDA-Nv-258"/>
                             <constraint firstItem="tbQ-oG-TNY" firstAttribute="leading" secondItem="jqK-lX-vT5" secondAttribute="leading" constant="30" id="jH6-j9-VaZ"/>
                             <constraint firstItem="Qa5-Og-IjL" firstAttribute="top" secondItem="lTi-LQ-cws" secondAttribute="bottom" constant="40" id="rhS-ts-TWA"/>
                         </constraints>
@@ -3839,6 +3853,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="clearButton" destination="YLe-PG-bby" id="4bn-R9-eyA"/>
+                        <outlet property="clearButtonBaseView" destination="XKP-bE-Fqd" id="97I-nU-crU"/>
                         <outlet property="menuButton" destination="oRE-bB-Uu5" id="ZnE-DZ-77l"/>
                         <outlet property="searchButton" destination="tbQ-oG-TNY" id="gCg-2t-kgk"/>
                         <outlet property="tableView" destination="Qa5-Og-IjL" id="vtg-d3-Eod"/>
@@ -3995,6 +4010,7 @@
         <image name="camera" width="26" height="26"/>
         <image name="chat" width="18" height="18"/>
         <image name="close_iPhone.png" width="16" height="19"/>
+        <image name="cross" width="22" height="22"/>
         <image name="dslike" width="18" height="18"/>
         <image name="edit" width="20" height="20"/>
         <image name="facebook" width="20" height="20"/>
@@ -4006,8 +4022,8 @@
         <image name="logo" width="143" height="143"/>
         <image name="menu" width="22" height="22"/>
         <image name="profile" width="100" height="100"/>
-        <image name="search" width="20" height="20"/>
-        <image name="search_logo" width="80" height="107"/>
+        <image name="searchbg" width="320" height="212"/>
+        <image name="searchlogo" width="110" height="110"/>
         <image name="send" width="22" height="22"/>
         <image name="tab_chat-h@x" width="22" height="22"/>
         <image name="tab_contact-h@x" width="22" height="22"/>
